sql/field.cc
@@ -4390,7 +4390,7 @@ double Field_double::val_real(void)
   return j;
 }
 
-longlong Field_double::val_int(void)
+longlong Field_double::val_int_from_real(bool want_unsigned_result)
 {
   ASSERT_COLUMN_MARKED_FOR_READ;
   double j;
@@ -4398,7 +4398,7 @@ longlong Field_double::val_int(void)
   bool error;
   float8get(j,ptr);
 
-  res= double_to_longlong(j, 0, &error);
+  res= double_to_longlong(j, want_unsigned_result, &error);
   if (error)
   {
     ErrConvDouble err(j);
